<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainactivity_xml"
    tools:context="com.openclassrooms.realestatemanager.Controllers.Activities.MainActivity">

    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main_drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start"
        tools:context=".Controllers.Activities.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/activity_main_toolbar"
                android:minHeight="?android:attr/actionBarSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:theme="@style/ToolBarStyle">

                <RelativeLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/toolbar_relativelayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/button_hamburger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_alignParentStart="true"
                        android:background="@color/colorPrimary"
                        android:src="@drawable/ic_menu_white_24dp"
                        android:contentDescription="@string/menu_hamburger" />

                    <!-- Title toolbar -->
                    <TextView
                        android:id="@+id/title_toolbar"
                        android:layout_toEndOf="@id/button_hamburger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_marginStart="7dp"
                        android:textSize="20sp"
                        android:maxLength="40"
                        android:textColor="@color/colorWhite"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:orientation="horizontal">

                        <!-- Button ADD -->
                        <ImageButton
                            android:id="@+id/add_property_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="7dp"
                            android:background="@color/colorPrimary"
                            android:src="@drawable/baseline_add_white_24"
                            android:contentDescription="@string/button_add" />

                        <!-- Button EDIT -->
                        <ImageButton
                            android:id="@+id/edit_property_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="7dp"
                            android:background="@color/colorPrimary"
                            android:src="@drawable/baseline_edit_white_24"
                            android:contentDescription="@string/button_edit" />

                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.Toolbar>

            <ScrollView
                android:id="@+id/fragment_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/fragment_position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </ScrollView>

        </LinearLayout>

        <!-- 2 | NavigationView -->
        <android.support.design.widget.NavigationView
            android:id="@+id/activity_main_nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="false"
            app:itemTextColor="@color/colorWhite"
            app:itemIconTint="@color/colorWhite"
            android:layout_marginStart="@dimen/margin_top"
            android:background="@color/colorPrimary"
            app:headerLayout="@layout/navigation_drawer_header"
            app:menu="@menu/navigation_drawer_menu" />

    </android.support.v4.widget.DrawerLayout>

</FrameLayout>
