<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="image_property">Image_property</string>
    <string name="media">Media</string>
    <string name="description">Description</string>
    <string name="add_a_description">Add a description</string>
    <string name="static_mapview">static_mapview</string>
    <string name="type_of_property">Type of property</string>
    <string name="select_type_of_property">Select a type of property</string>
    <string name="price">Price ($)</string>
    <string name="overview">Overview</string>
    <string name="surface">Surface (m²)</string>
    <string name="surface_display">Surface : </string>
    <string name="localization">Localization</string>
    <string name="address">Address</string>
    <string name="short_description">Short description</string>
    <string name="interest_points_nearby">Interest points nearby</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="number_of_rooms_display">Number of rooms :</string>
    <string name="sold">Sold</string>
    <string name="publication_date">Publication date</string>
    <string name="date_of_sale">Date of sale</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="select_an_image">Select an image</string>
    <string name="apartment">Apartment</string>
    <string name="write_a_description">Write a description</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="to">to</string>
    <string name="number_of_pictures_min">Number of pictures (min):</string>
    <string name="number_of_rooms_min">Number of rooms (min):</string>
    <string name="search">SEARCH</string>
    <string name="search_properties">SEARCH PROPERTIES</string>
    <string name="maison_pictures">maison_pictures</string>
    <string name="go_back_to_main_page">Go back to main page</string>
    <string name="simulation_loan">Simulation loan</string>
    <string name="button_simulation">button simulation</string>
    <string name="error_internet">No internet connection available</string>

    <string-array name="type_property">
        <item>Apartment</item>
        <item>House</item>
        <item>Office</item>
    </string-array>

    <!-- MENU NAVIGATION DRAWER -->
    <string name="menu_mapsactivity">Find property nearby</string>
    <string name="menu_search">Search properties</string>
    <string name="change_activity_confirmation">Are you sure to select this menu ? All changes will be discarded</string>

    <!-- IMAGES VIEWHOLDER-->
    <string name="delete_image">Image deletion</string>
    <string name="delete_confirmation">Are you sure that you want to delete this image ?</string>
    <string name="confirm">Confirm</string>
    <string name="no_image_saved">No image saved \n Please select an image or click on cancel</string>
    <string name="image_added">Image added !</string>
    <string name="image_updated">Image updated !</string>
    <string name="error_image_load">Image cannot be loaded.</string>

    <!-- INTEREST POINTS API -->
    <string name="error_interest_points">Error to get interest points</string>

    <!-- SEARCH ADDRESS API -->
    <string name="error_list_addresses">Error to get list of suggestions</string>
    <string name="error_latlng_address">Error to get latitude and longitude of selected address</string>
    <string name="error_static_map_address">Error to get static map of selected address</string>

    <!-- STATUS IMAGES-->
    <string name="status_OK">OK</string>
    <string name="status_delete">TO_DELETE</string>
    <string name="status_update">TO_UPDATE</string>
    <string name="status_add">TO_ADD</string>

    <!-- EDIT FRAGMENT-->
    <string name="enter_address">Enter an address</string>
    <string name="image_main">image_main</string>
    <string name="interest_points">Interest points:</string>
    <string name="menu_hamburger">menu hamburger</string>
    <string name="button_add">button add</string>
    <string name="button_edit">button edit</string>
    <string name="button_search">button search</string>
    <string name="icon_add_a_photo">icon add a photo</string>
    <string name="estate_agent">Estate agent :</string>
    <string name="icon_estate_agent">icon_estate_agent</string>
    <string name="publish_date">Publication date :</string>
    <string name="sold_date">sold_date</string>
    <string name="sold_on">Sold on</string>
    <string name="published_on">Published on</string>
    <string name="rooms">Rooms :</string>
    <string name="sold_text">SOLD</string>
    <string name="main_image">Main image</string>
    <string name="extra_images">Extra images</string>
    <string name="ok">OK</string>
    <string name="warning_title">Warning!</string>
    <string name="change_item_list">Are you sure to change of property ? All changes will be discarded</string>
    <string name="leave_edit_mode">Are you sure to leave edit mode ? All changes will be discarded</string>
    <string name="error_address_not_found">Address not found</string>
    <string name="error_image_recovering">Image cannot be recovered.</string>
    <string name="give_permission">Please give your permission</string>
    <string name="check_price">Please enter a price above 0.</string>
    <string name="check_surface">Please enter a surface above 0.</string>
    <string name="check_date_publish">Please enter a date of publishing.</string>
    <string name="check_room_number">Please enter a number of rooms above 0.</string>
    <string name="check_description">Please enter a description.</string>
    <string name="check_main_image">Please select a main image for the property.</string>
    <string name="check_sold_date">As the property has been sold, please enter a date of sale.</string>
    <string name="check_sold_status">A date of sale is indicated but the property has not the status "sold". Please check the status.</string>
    <string name="snackbar_sucess_add">New property successfully saved</string>
    <string name="snackbar_sucess_update">Property successfully updated</string>

    <!-- DISPLAY FRAGMENT-->
    <string name="interest_rate">Interest rate</string>
    <string name="duration_years">Duration (years)</string>
    <string name="contribution">Contribution ($)</string>
    <string name="calculation">CALCULATION</string>
    <string name="montly_payment">Your montly payment is:</string>
    <string name="simulation_calculation_monthly_payment">SIMULATION CALCULATION MONTHLY PAYMENT</string>
    <string name="return_to_the_list">Return to the list</string>
    <string name="return_to_the_map">Return to the map</string>
    <string name="return_to_search_criteria">Return to search criteria</string>

    <!-- SEARCH FRAGMENT-->
    <string name="radius">1000</string>
    <string name="radius_title">Radius (m): </string>
    <string name="any">any</string>
    <string name="radius_camera">1000</string>
    <string name="return_to_the_search">Return to search query</string>
    <string name="no_result_found">No result found for these criteria.</string>
    <string name="reset">Reset</string>
    <string name="reset_confirmation">Are you sure that you want to reset all criteria?</string>

    <!-- MAPS -->
    <string name="error_geolocalization">Error geolocalization</string>
    <string name="error_current_location">Error to get current location</string>
    <string name="error_map_init">Problem to initialize the map</string>

</resources>
