...
        <!-- CANCEL -->
        <Button
            android:id="@+id/buttonSearchCancel"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_toStartOf="@id/buttonSearch"
            android:background="@android:color/white"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/cancel"/>

        <!-- SEARCH -->
        <Button
...
